--- a/index.html
+++ b/index.html
@@ -20,28 +20,34 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-  <h1>Heading 1</h1>
-  <h2>Heading 2</h2>
-  <h3>Heading 3</h3>
-  <h4>Heading 4</h4>
-  <h5>Heading 5</h5>
-  <h6>Heading 6</h6>
+  <div class="alert-box radius alert" data-alert>
+    Work in progress :)
+    <a href="#" class='close'>x</a>
+  </div>
+  <div class="large-4 columns">
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus culpa nihil eaque veniam, tenetur quaerat nam ullam quo, iste eos similique odio, voluptatibus dolorum voluptate aspernatur vel animi quod. Perferendis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus culpa nihil eaque veniam, tenetur quaerat nam ullam quo, iste eos similique odio, voluptatibus dolorum voluptate aspernatur vel animi quod. Perferendis.</p>
 
-  <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
+    <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
 
-  <ul>
-    <li>One</li>
-    <li>Two</li>
-    <li>Three</li>
-  </ul>
-  
-  <ol>
-    <li>One</li>
-    <li>Two</li>
-    <li>Three</li>
-  </ol>
+    <ul>
+      <li>One</li>
+      <li>Two</li>
+      <li>Three</li>
+    </ul>
+    
+    <ol>
+      <li>One</li>
+      <li>Two</li>
+      <li>Three</li>
+    </ol>
+  </div>
 
   <script type="text/javascript" src="js/plugins.js"></script>
   <script type="text/javascript" src="js/foundation.js"></script>
