syncing with foundation starter

--- a/index.html
+++ b/index.html
@@ -46,11 +46,23 @@
       <li>One</li>
       <li>Two</li>
       <li>Three</li>
-    </ol>
+    </ol> 
   </div>
-
-  <script type="text/javascript" src="js/plugins.js"></script>
-  <script type="text/javascript" src="js/foundation.js"></script>
+  <!-- plugins -->
+  <script type="text/javascript" src="js/vendor/plugins/fastclick.js"></script>
+  <script type="text/javascript" src="js/vendor/plugins/jquery.cookie.js"></script>
+  <script type="text/javascript" src="js/vendor/plugins/jquery.touchSwipe.min.js"></script>
+  
+  <!-- shims -->
+  <script type="text/javascript" src="js/vendor/shims/custom.moderizr.js"></script>
+  <script type="text/javascript" src="js/vendor/shims/rem.js"></script>
+  <script type="text/javascript" src="js/vendor/shims/html5.js"></script>
+  <script type="text/javascript" src="js/vendor/shims/respond.min.js"></script>
+  
+  <!-- foundation -->
+  <script type="text/javascript" src="js/vendor/foundation.min.js"></script>
+  
+  <!-- custom js -->
   <script type="text/javascript" src="js/theme.js"></script>
   </body>
 </html>
