--- a/index.html
+++ b/index.html
@@ -48,13 +48,17 @@
       <li>Three</li>
     </ol> 
   </div>
+  <!-- jQuery -->
+  <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  
+  
   <!-- plugins -->
   <script type="text/javascript" src="js/vendor/plugins/fastclick.js"></script>
   <script type="text/javascript" src="js/vendor/plugins/jquery.cookie.js"></script>
   <script type="text/javascript" src="js/vendor/plugins/jquery.touchSwipe.min.js"></script>
   
   <!-- shims -->
-  <script type="text/javascript" src="js/vendor/shims/custom.moderizr.js"></script>
+  <script type="text/javascript" src="js/vendor/shims/custom.modernizr.js"></script>
   <script type="text/javascript" src="js/vendor/shims/rem.js"></script>
   <script type="text/javascript" src="js/vendor/shims/html5.js"></script>
   <script type="text/javascript" src="js/vendor/shims/respond.min.js"></script>
